--- a/index.html
+++ b/index.html
@@ -46,6 +46,101 @@
         </div>
     </nav>
 
+    <!-- Main -->
+    <main id="main">
+        <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/hawaii.jpg" class="d-block w-100" alt="Hawaii 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/hawaii2.jpg" class="d-block w-100" alt="Hawaii 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/hawaii3.jpeg" class="d-block w-100" alt="Hawaii 4">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/honolulu.jpg" class="d-block w-100" alt="Honolulu">
+                </div>
+                <div class="overlay">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-md-6 offset-md-6 text-center text-md-right">
+                                <h1>Platzi Conf Hawaii</h1>
+                                <p class="d-none d-md-block">Platzi Conf llega por primera vez a Hawaii! Un evento para
+                                    compartir con nuestra
+                                    comunidad. El conocimiento y la experiencia de los expertos que estan creando el
+                                    futuro de internet.
+                                    Ven a concer a miembros del Team Platzi, a otros estudiantes de Platzi y a los
+                                    oradores de primer nivel que tenemos para ti.</p>
+                                <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
+                                <button type="button" class="btn btn-platzi">Comprar Tickets</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Sepakers -->
+
+    <section id="speakers" class="mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center text-uppercase">
+                    <small> Conoce a los </small>
+                    <h2>Oradores</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="Foto Sacha">
+                        <div class="card-body">
+                            <h5 class="card-title">Sacha Lifszyc</h5>
+                            <p class="card-text">Donec convallis maximus velit. Etiam sem est, egestas eget efficitur
+                                in, facilisis eu mauris. Ut a nisi bibendum, dictum est placerat, mollis felis. Aliquam
+                                erat volutpat. Cras luctus erat fermentum, ultricies arcu in, lobortis urna.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="assets/speakers/cvander.jpeg" class="card-img-top" alt="Foto Cvander">
+                        <div class="card-body">
+                            <h5 class="card-title">Cristian Van Der H.</h5>
+                            <p class="card-text">Donec convallis maximus velit. Etiam sem est, egestas eget efficitur
+                                in, facilisis eu mauris. Ut a nisi bibendum, dictum est placerat, mollis felis. Aliquam
+                                erat volutpat. Cras luctus erat fermentum, ultricies arcu in, lobortis urna.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="assets/speakers/leonidas.jpeg" class="card-img-top" alt="Foto Leonidas">
+                        <div class="card-body">
+                            <h5 class="card-title">Leonidas Esteban</h5>
+                            <p class="card-text">Donec convallis maximus velit. Etiam sem est, egestas eget efficitur
+                                in, facilisis eu mauris. Ut a nisi bibendum, dictum est placerat, mollis felis. Aliquam
+                                erat volutpat. Cras luctus erat fermentum, ultricies arcu in, lobortis urna.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <div class="card">
+                        <img src="assets/speakers/freddy.jpeg" class="card-img-top" alt="Foto Freddy">
+                        <div class="card-body">
+                            <h5 class="card-title">Freddy Vega</h5>
+                            <p class="card-text">Donec convallis maximus velit. Etiam sem est, egestas eget efficitur
+                                in, facilisis eu mauris. Ut a nisi bibendum, dictum est placerat, mollis felis. Aliquam
+                                erat volutpat. Cras luctus erat fermentum, ultricies arcu in, lobortis urna.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <div id="footer" class="pb-4 pt-4">
