--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                     <div class="card">
                         <img src="assets/speakers/sacha.jpg" class="card-img-top" alt="Foto Sacha">
                         <div class="card-body">
+                            <div class="badges">
+                                <span class="badge badge-warning">JavaScript</span>
+                                <span class="badge badge-info">React</span>
+                            </div>
                             <h5 class="card-title">Sacha Lifszyc</h5>
                             <p class="card-text">Donec convallis maximus velit. Etiam sem est, egestas eget efficitur
                                 in, facilisis eu mauris. Ut a nisi bibendum, dictum est placerat, mollis felis. Aliquam
@@ -109,6 +113,10 @@
                     <div class="card">
                         <img src="assets/speakers/cvander.jpeg" class="card-img-top" alt="Foto Cvander">
                         <div class="card-body">
+                            <div class="badges">
+                                <span class="badge badge-primary">Marketing</span>
+                                <span class="badge badge-warning">News</span>
+                            </div>
                             <h5 class="card-title">Cristian Van Der H.</h5>
                             <p class="card-text">Donec convallis maximus velit. Etiam sem est, egestas eget efficitur
                                 in, facilisis eu mauris. Ut a nisi bibendum, dictum est placerat, mollis felis. Aliquam
@@ -118,8 +126,12 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mb-4">
                     <div class="card">
-                        <img src="assets/speakers/leonidas.jpeg" class="card-img-top" alt="Foto Leonidas">
+                        <img src="assets/speakers/leonidas2.jpeg" class="card-img-top" alt="Foto Leonidas">
                         <div class="card-body">
+                            <div class="badges">
+                                <span class="badge badge-info">Trainer</span>
+                                <span class="badge badge-danger">Frontend</span>
+                            </div>
                             <h5 class="card-title">Leonidas Esteban</h5>
                             <p class="card-text">Donec convallis maximus velit. Etiam sem est, egestas eget efficitur
                                 in, facilisis eu mauris. Ut a nisi bibendum, dictum est placerat, mollis felis. Aliquam
@@ -131,12 +143,37 @@
                     <div class="card">
                         <img src="assets/speakers/freddy.jpeg" class="card-img-top" alt="Foto Freddy">
                         <div class="card-body">
+                            <div class="badges">
+                                <span class="badge badge-dark">GitHub</span>
+                                <span class="badge badge-success">CEO</span>
+                            </div>
                             <h5 class="card-title">Freddy Vega</h5>
                             <p class="card-text">Donec convallis maximus velit. Etiam sem est, egestas eget efficitur
                                 in, facilisis eu mauris. Ut a nisi bibendum, dictum est placerat, mollis felis. Aliquam
                                 erat volutpat. Cras luctus erat fermentum, ultricies arcu in, lobortis urna.</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Place and Time-->
+
+    <section id="place-time">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 col-lg-6 pl-0 pr-0">
+                    <img src="assets/honolulu.jpg" alt="ciudad honolulu">
+                </div>
+                <div class="col-12 col-lg-6 pt-4 pb-4">
+                    <h2>Honolulu - Octubre 2025</h2>
+                    <p>Honolulu u Honolulú2​ es la capital y localidad más grande del estado de Hawái, en los Estados
+                        Unidos.nota 1​ Honolulu es la más sureña de entre las principales ciudades estadounidenses.
+                        Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu,
+                        la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la
+                        isla (aproximadamente 600 km² de superficie).</p>
+                    <a href="https://es.wikipedia.org/wiki/Honolulu" class="btn btn-outline-light">Conoce más</a>
                 </div>
             </div>
         </div>
