Scrollspy and Modals implemented

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>PlatziConf Hawaii</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#navbar" data-offset="65">
 
     <!-- Header -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/platzi-logo.png" alt="Platzi_logo">
@@ -24,22 +24,23 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">La Conferencia</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#main">La Conferencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Los Oradores</a>
+                        <a class="nav-link" href="#speakers">Los Oradores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">El Lugar y la fecha</a>
+                        <a class="nav-link" href="#place-time">El Lugar y la fecha</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Conviertete en Orador</a>
+                        <a class="nav-link" href="#speaker-form">Conviertete en Orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-platzi " href="#">Comprar Tickets</a>
+                        <a class="nav-link text-platzi " href="#" data-toggle="modal" data-target="#buyModal">Comprar
+                            Tickets</a>
                     </li>
                 </ul>
             </div>
@@ -74,7 +75,8 @@
                                     Ven a concer a miembros del Team Platzi, a otros estudiantes de Platzi y a los
                                     oradores de primer nivel que tenemos para ti.</p>
                                 <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
-                                <button type="button" class="btn btn-platzi">Comprar Tickets</button>
+                                <button type="button" class="btn btn-platzi" data-toggle="modal"
+                                    data-target="#buyModal">Comprar Tickets</button>
                             </div>
                         </div>
                     </div>
@@ -191,7 +193,8 @@
             </div>
             <div class="row">
                 <div class="col text-center">
-                    Anótate como orador para dar una charla ingnite.
+                    Anótate como orador para dar una <abbr data-toggle="tooltip" title="Charlas de 5 minutos">charla
+                        ignite</abbr>.
                     Cuéntanos de qué quieres hablar.
                 </div>
             </div>
@@ -255,6 +258,44 @@
         </div>
     </div>
 
+    <!-- Modal -->
+
+    <div class="modal fade" id="buyModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Comprar Ticket</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col">
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon1">@</span>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Username" aria-label="Username"
+                                        aria-describedby="basic-addon1">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="alert alert-warning" role="alert">
+                        Recibirás un correo de confirmación si sales sorteado.
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-platzi">Comprar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Jquery, Popper, Boostrap -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -265,6 +306,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 
 
